# jungizzRenderer

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Application.cpp.C351D41270DB2147.idx  Application.h.04989F302558092E.idx  BRDF_Scene.cpp.B9077459C1A3740E.idx  BRDF_Scene.h.B10F26C7FDB18908.idx  Camera.cpp.EF2C166D7A9293C0.idx  Camera.h.3CCC3062CE024038.idx  Framebuffer.h.62D79CE90F2C21F7.idx  Importer.hpp.2850D3CC423DE6D7.idx  Light.h.4469B41A7B4F96C8.idx  Main2.cpp.99AF6F251E863045.idx  MathFunctions.h.0578BC81FDCF197C.idx  Mesh.cpp.B60FD07093A2DBAA.idx  Mesh.h.1AAEFC1B52E2F1F5.idx  Model.cpp.6634B1A3498607D5.idx  Model.h.A1AABC38870828DA.idx  SSSSS_Scene.cpp.80364A4751BAE877.idx  SSSSS_Scene.h.28B81E750BD3A6F7.idx  Scene.h.364E856EB4D10A59.idx  Shader.cpp.584AA0CFC1A151DB.idx  Shader.h.F57A5BF08F3CA177.idx  Texture.cpp.413A37708D472A11.idx  Texture.h.F362A68864861195.idx  _fixes.hpp.61B565D4E515E68E.idx  _vectorize.hpp.D6AC2AD6C757BA4B.idx  aabb.h.2DE31A3A244F9C40.idx  anim.h.3B4B010804334FAB.idx  camera.h.8A3207D6BFD185CD.idx  (+171 more)
resources/: LPS_Head.mtl
shader/: basic_shader.vert  diffShader.vert  fragment_shader.frag  pbr_shader.frag  quad_shader.vert  specShader.frag  specShader.vert  sssss_colBlur_shader.frag  sssss_diffuse_shader.frag  sssss_rowBlur_shader.frag
source/: Application.cpp  Application.h  GLWidget.cpp  GLWidget.h  MainWindow.cpp  MainWindow.h  Scene.cpp  Scene.h  main.cpp
source/core/: Camera.cpp  Camera.h  Framebuffer.h  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ScreenQuadMesh.cpp  ScreenQuadMesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
source/scenes/: BRDF_Scene.cpp  BRDF_Scene.h  PBR_Scene.cpp  PBR_Scene.h  SSSSS_Scene.cpp  SSSSS_Scene.h
